# cv_project

./: .gitignore  README.md  architecture.md  pyproject.toml  rules.md  tasks.md
lessons/lesson-01-cv-fundamentals/: README.md  lesson.config.json  start.sh
lessons/lesson-01-cv-fundamentals/backend/: main.py  models_lesson01.py  solutions.py  tests.py
lessons/lesson-01-cv-fundamentals/frontend/: package-lock.json  tailwind.config.js
lessons/lesson-02-classification/: lesson.config.json  start.sh
scripts/: new_lesson.sh
shared/: device.py  model_registry.py
v1/: README.md  design.md  prd.md  pyproject.toml
v1/lessons/lesson-01-cv-fundamentals/: README.md  lesson.config.json  start.sh
v1/lessons/lesson-01-cv-fundamentals/backend/: main.py
v1/lessons/lesson-01-cv-fundamentals/backend/exercises/: ex1_starter.py
v1/lessons/lesson-01-cv-fundamentals/frontend/: index.html
v1/lessons/lesson-01-cv-fundamentals/frontend/src/: App.jsx
v1/lessons/lesson-01-cv-fundamentals/frontend/src/components/: ProgressDots.jsx  TopBar.jsx
v1/lessons/lesson-01-cv-fundamentals/frontend/src/panels/: Exercises.jsx  Progress.jsx  Tutorial.jsx
v1/lessons/lesson-01-cv-fundamentals/frontend/src/store/: lessonStore.js
v1/lessons/lesson-01-cv-fundamentals/frontend/src/widgets/: ConvolutionDemo.jsx
v1/lessons/lesson-02-classification/: README.md  lesson.config.json
v1/lessons/lesson-02-classification/backend/: main.py  models_lesson_02.py  tests.py
v1/lessons/lesson-02-classification/backend/exercises/: ex1_starter.py
v1/lessons/lesson-02-classification/frontend/: index.html
v1/lessons/lesson-02-classification/frontend/src/: api.js
v1/lessons/lesson-02-classification/frontend/src/components/: TabBar.jsx  TopBar.jsx
v1/lessons/lesson-02-classification/frontend/src/panels/: Exercises.jsx
v1/lessons/lesson-02-classification/frontend/src/store/: lessonStore.js
v1/scripts/: new_lesson.sh
v1/shared/: progress.py  utils.py
v2/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
v2/scripts/: copy-opencv.mjs
v2/src/: App.jsx  index.css  main.jsx
v2/src/challenges/: checker.js  lesson-01.json
(+41 files in other folders)
