[project]
name = "cv-beginner-proj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "sse-starlette>=3.4.4",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff.lint.per-file-ignores]
# Starter files intentionally contain `...` placeholders and pre-staged imports
# for the student to complete; suppress unused-import and unused-variable rules.
"**/exercises/*_starter.py" = ["F401", "F841"]
