[project]
name = "cv-beginner-proj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "sse-starlette>=3.4.4",
    # Lower bound is 2.11.0 because that's the highest currently mirrored to
    # PyTorch's CUDA 12.9 index; PyPI's MPS-enabled wheel for Mac is 2.12.0,
    # which uv picks via the Mac-side resolution split.
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff.lint.per-file-ignores]
# Starter files intentionally contain `...` placeholders and pre-staged imports
# for the student to complete; suppress unused-import and unused-variable rules.
"**/exercises/*_starter.py" = ["F401", "F841"]

# Linux gets PyTorch's CUDA 12.9 wheel (Blackwell / RTX 50-series support).
# Mac falls through to the PyPI default, which is the MPS-enabled wheel.
[tool.uv.sources]
torch = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
